--- a/index.html
+++ b/index.html
@@ -2,136 +2,144 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Hephos AI Assistant — Premium</title>
+  <title>Hephos AI Assistant — Ultra Premium</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="color-scheme" content="dark" />
-  <!-- Favicon (koristi isti logo) -->
   <link rel="icon" type="image/png" href="logo.png"/>
   <style>
     :root{
       --emerald:#023020; --emerald-2:#0e2e25; --emerald-3:#10231d;
-      --gold:#D4AF37; --gold-2:#e8c95c; --text:#F5F7F6; --muted:#c7d3cd;
-      --panel:rgba(10,26,21,.55); --stroke:rgba(212,175,55,.25);
-      --ai:#0f1f18; --me:#133b2f; --shadow:0 30px 80px rgba(0,0,0,.45);
-      --ring:0 0 0 1px rgba(212,175,55,.25), 0 0 30px rgba(212,175,55,.12);
+      --gold:#D4AF37; --gold-2:#e8c95c; --gold-3:#f6e6a9;
+      --text:#F5F7F6; --muted:#5b5b5b;
+      --stroke:rgba(212,175,55,.28);
     }
-    *{box-sizing:border-box} html,body{height:100%}
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+
+    /* Bijelo-zlatna podloga s animiranim shimmerom */
     body{
-      margin:0; color:var(--text);
-      font:16px/1.6 Inter, ui-sans-serif, system-ui, "Segoe UI", Roboto, Arial, sans-serif;
+      font:16px/1.6 Inter,system-ui,"Segoe UI",Roboto,sans-serif;
       background:
-        radial-gradient(1200px 700px at 85% -10%, rgba(212,175,55,.15), transparent 60%),
-        radial-gradient(900px 600px at -10% 110%, rgba(2,48,32,.5), transparent 60%),
-        linear-gradient(180deg, #08120f, #0b1713 40%, var(--emerald-3) 100%);
+        radial-gradient(900px 600px at 120% -10%, rgba(212,175,55,.28), transparent 60%),
+        linear-gradient(160deg,#fff 10%,#fdf7e3 55%,#f3d98b 100%);
+      position:relative; color:#222;
+      min-height:100vh; display:flex; flex-direction:column; align-items:center;
+      overflow-x:hidden;
+    }
+    /* zlatni shimmer trak */
+    .shimmer{
+      position:fixed; inset:0; pointer-events:none; z-index:0;
+      background: radial-gradient(1200px 200px at -20% 0%, rgba(246,230,169,.20), transparent 60%) ,
+                  radial-gradient(1000px 180px at 120% 20%, rgba(212,175,55,.18), transparent 65%);
+      animation: sweep 12s linear infinite;
+      mix-blend-mode:soft-light;
+    }
+    @keyframes sweep{
+      0%{transform:translateX(-10%) translateY(0)}
+      50%{transform:translateX(10%) translateY(6%)}
+      100%{transform:translateX(-10%) translateY(0)}
     }
 
-    /* Top bar */
+    /* Header */
     .nav{
-      position:sticky; top:0; z-index:20;
+      z-index:10;
+      position:sticky; top:0; width:100%;
       display:flex; align-items:center; justify-content:center; gap:12px;
-      padding:12px 16px;
-      background:linear-gradient(180deg, rgba(2,48,32,.9), rgba(2,48,32,.6));
-      border-bottom:1px solid rgba(212,175,55,.15);
-      box-shadow:0 8px 30px rgba(0,0,0,.35);
-      backdrop-filter:saturate(130%) blur(10px);
+      padding:12px 18px; background:rgba(255,255,255,.7); backdrop-filter:blur(10px);
+      border-bottom:1px solid rgba(212,175,55,.25); box-shadow:0 4px 20px rgba(0,0,0,.1);
     }
-    .nav-left{position:absolute; left:16px; display:flex; align-items:center; gap:10px}
-    .logo{height:28px; width:auto; display:block;
-      /* ako je logo mračan/na tamnoj pozadini, odkomentiraj sljedeći red za posvjetljivanje: */
-      /* filter: brightness(1000%) contrast(95%); */
-    }
-    .brand{font-weight:700; letter-spacing:.6px}
-    .tag{padding:4px 8px; border-radius:999px; font-size:12px; color:#111;
-      background:linear-gradient(135deg,var(--gold),var(--gold-2));
-      border:1px solid rgba(255,255,255,.12);
-      box-shadow:0 6px 20px rgba(212,175,55,.35);
+    .nav-left{position:absolute; left:20px; display:flex; align-items:center; gap:10px}
+    .logo{height:32px}
+    /* logo glow kad AI tipka */
+    .logo.glow{ filter: drop-shadow(0 0 14px rgba(212,175,55,.75)) brightness(1.1); }
+
+    .brand{font-weight:800; color:#023020; letter-spacing:.4px}
+    .tag{padding:4px 10px; border-radius:999px; font-size:12px; color:#111;
+      background:linear-gradient(135deg,var(--gold),var(--gold-3));
+      border:1px solid rgba(255,255,255,.2);
+      box-shadow:0 6px 18px rgba(212,175,55,.35);
     }
 
-    .container{ max-width:1000px; margin:28px auto; padding:0 16px; display:grid; gap:18px }
-    .hero{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:16px;
-      padding:18px 20px; border:1px solid var(--stroke); border-radius:16px;
-      background:linear-gradient(180deg, rgba(15,33,26,.65), rgba(10,26,21,.45));
-      box-shadow:var(--shadow); backdrop-filter:blur(10px);
+    .container{z-index:1; max-width:950px; width:100%; margin:28px auto; padding:0 16px; display:flex; flex-direction:column; gap:20px}
+    .hero{
+      padding:20px; border-radius:18px;
+      background:linear-gradient(135deg,#ffffffd0,#fff7e7d0);
+      border:1px solid rgba(212,175,55,.3);
+      box-shadow:0 10px 25px rgba(0,0,0,.12);
+      display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:12px;
     }
-    .hero h1{margin:0; font-weight:800; letter-spacing:.4px}
-    .hero p{margin:4px 0 0; color:var(--muted); font-size:14px}
-    .chip{border:1px solid var(--stroke); color:var(--muted);
-      padding:8px 10px; border-radius:999px; font-size:12px; background:rgba(16,35,29,.35); margin-left:8px
-    }
+    .hero h1{margin:0; font-weight:900; color:#023020}
+    .hero p{margin:4px 0 0; color:#5b5b5b; font-size:14px}
+    .chip{padding:8px 12px; border-radius:999px; font-size:13px; border:1px solid rgba(212,175,55,.35); background:rgba(255,255,255,.55); color:#444; margin-left:8px}
 
+    /* Chatbox (tamno zeleni) */
     .card{
-      height:72vh; min-height:520px; position:relative;
-      border:1px solid var(--stroke); border-radius:18px; overflow:hidden;
-      background:linear-gradient(180deg, rgba(16,35,29,.55), rgba(10,26,21,.45));
-      backdrop-filter:blur(10px); box-shadow:var(--shadow);
+      height:72vh; border-radius:22px; overflow:hidden; position:relative;
+      background:linear-gradient(180deg,var(--emerald),var(--emerald-3));
+      border:2px solid var(--stroke);
+      box-shadow:0 30px 70px rgba(0,0,0,.28);
       display:flex; flex-direction:column;
     }
-    /* watermark logo u pozadini chata */
     .card::before{
       content:""; position:absolute; inset:0; pointer-events:none;
-      background:
-        radial-gradient(400px 400px at 85% 20%, rgba(212,175,55,.08), transparent 60%),
-        url('logo.png') center/240px auto no-repeat;
-      opacity:.06; filter:grayscale(100%) brightness(200%);
+      background:url('logo.png') center/260px no-repeat;
+      opacity:.05; filter:grayscale(100%) brightness(400%);
     }
-
-    .card-head{ display:flex; align-items:center; justify-content:space-between; gap:10px;
-      padding:14px 16px; border-bottom:1px solid var(--stroke);
-      background:linear-gradient(180deg, rgba(16,35,29,.65), rgba(16,35,29,.35));
+    .card-head{
+      padding:14px 16px; display:flex; justify-content:space-between; align-items:center;
+      background:rgba(2,48,32,.7); border-bottom:1px solid rgba(255,255,255,.12); backdrop-filter:blur(6px);
     }
-    .status{display:flex; align-items:center; gap:8px; color:var(--muted); font-size:13px}
+    .status{display:flex; align-items:center; gap:8px; color:#fff; font-size:13px}
     .dot{width:8px; height:8px; border-radius:50%; background:#43d38d; box-shadow:0 0 12px #43d38d}
 
-    .msgs{flex:1; overflow:auto; padding:18px; display:flex; flex-direction:column; gap:12px}
-    .msg{ max-width:78%; padding:12px 14px; border-radius:14px; position:relative;
-      animation:fadeIn .2s ease; word-wrap:break-word; white-space:pre-wrap }
-    .ai{ align-self:flex-start; background:var(--ai); border:1px solid var(--stroke) }
-    .me{ align-self:flex-end; background:var(--me); border:1px solid rgba(212,175,55,.18) }
-    .msg small{ display:block; opacity:.65; font-size:11px; margin-top:6px }
-    .typing{ display:flex; gap:6px; align-items:center; align-self:flex-start; padding:10px 12px;
-      background:var(--ai); border:1px dashed var(--stroke); border-radius:12px }
-    .typing i{ width:6px; height:6px; border-radius:999px; background:var(--gold); opacity:.85; animation:bounce 1.2s infinite }
-    .typing i:nth-child(2){ animation-delay:.15s } .typing i:nth-child(3){ animation-delay:.3s }
+    .msgs{flex:1; padding:18px; display:flex; flex-direction:column; gap:12px; overflow:auto}
+    .msg{padding:12px 16px; max-width:78%; border-radius:14px; font-size:15px; line-height:1.5; word-wrap:break-word; box-shadow:0 2px 8px rgba(0,0,0,.15); animation:fade .2s ease}
+    .ai{align-self:flex-start; background:#0f1f18; border:1px solid rgba(212,175,55,.25); color:#fff}
+    .me{align-self:flex-end; background:#024e37; border:1px solid rgba(212,175,55,.32); color:#fff}
 
-    .card-foot{ border-top:1px solid var(--stroke); padding:12px; display:flex; gap:10px;
-      background:linear-gradient(0deg, rgba(16,35,29,.6), rgba(16,35,29,.35));
-    }
-    input{
-      flex:1; padding:14px; border-radius:12px; border:1px solid var(--stroke);
-      background:rgba(12,24,20,.7); color:var(--text); outline:none; transition:.2s;
-      box-shadow:inset 0 0 0 1px rgba(255,255,255,.02);
-    }
-    input:focus{ box-shadow:var(--ring) }
+    .typing{display:flex; gap:6px; align-items:center; padding:8px 12px; background:#0f1f18; border:1px dashed rgba(212,175,55,.35); border-radius:12px}
+    .typing i{width:6px; height:6px; border-radius:50%; background:var(--gold); opacity:.85; animation:bounce 1.2s infinite}
+    .typing i:nth-child(2){animation-delay:.15s} .typing i:nth-child(3){animation-delay:.3s}
+
+    .card-foot{padding:12px; display:flex; gap:10px; background:rgba(2,48,32,.7); border-top:1px solid rgba(255,255,255,.1); backdrop-filter:blur(6px)}
+    input{flex:1; padding:14px; border-radius:12px; border:1px solid rgba(212,175,55,.35); background:rgba(255,255,255,.1); color:#fff; outline:none}
+    input:focus{border-color:var(--gold); box-shadow:0 0 8px rgba(212,175,55,.45)}
+
+    /* 3D zlatni gumb + pulsirajući glow */
     button{
-      padding:14px 18px; border-radius:12px; border:1px solid rgba(255,255,255,.06);
-      background:linear-gradient(135deg, var(--gold), var(--gold-2));
-      color:#111; font-weight:700; letter-spacing:.3px; cursor:pointer; transition:.22s;
-      box-shadow:0 12px 30px rgba(212,175,55,.28);
+      position:relative; padding:14px 20px; border-radius:12px; border:0; cursor:pointer;
+      color:#111; font-weight:800; letter-spacing:.2px;
+      background:linear-gradient(135deg,var(--gold),var(--gold-2));
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,.55),
+        inset 0 -2px 0 rgba(173,136,20,.6),
+        0 10px 20px rgba(212,175,55,.35);
+      transition:transform .18s ease, box-shadow .18s ease;
     }
-    button:hover{ transform:translateY(-1px) } button:active{ transform:translateY(0) }
+    button::after{ /* halo glow */
+      content:""; position:absolute; inset:-6px; border-radius:14px; z-index:-1;
+      background:radial-gradient(240px 40px at 50% 100%, rgba(212,175,55,.45), transparent 70%);
+      opacity:.0; transition:opacity .18s ease;
+    }
+    button:hover{ transform:translateY(-1px); box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 -2px 0 rgba(173,136,20,.7), 0 14px 28px rgba(212,175,55,.45) }
+    button:hover::after{ opacity:.6 }
+    button:active{ transform:translateY(0) }
 
     .footnote{margin:14px auto 28px; text-align:center; color:var(--muted); font-size:12px}
 
-    @keyframes fadeIn{ from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:none} }
-    @keyframes bounce{ 0%,60%,100%{ transform:translateY(0); opacity:.7 } 30%{ transform:translateY(-4px); opacity:1 } }
+    @keyframes fade{from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:none}}
+    @keyframes bounce{0%,60%,100%{transform:translateY(0); opacity:.7} 30%{transform:translateY(-4px); opacity:1}}
 
-    @media (max-width:720px){
-      .container{ margin:18px auto }
-      .card{ height:70vh; min-height:500px }
-      .msg{ max-width:88% }
-      .hero{ padding:14px 16px }
-      .nav-left{display:none}
-    }
+    @media(max-width:720px){ .container{margin:18px auto} .card{height:70vh; min-height:500px} .msg{max-width:88%} .nav-left{left:12px} }
   </style>
 </head>
 <body>
+  <div class="shimmer" aria-hidden="true"></div>
+
   <div class="nav">
     <div class="nav-left">
-      <!-- LOGO U HEADERU -->
-      <img src="logo.png" alt="Hephos AI logo" class="logo" />
-      <span style="font-weight:700">Hephos AI</span>
+      <img src="logo.png" alt="Hephos AI logo" class="logo" id="logo"/>
+      <span class="brand">Hephos AI</span>
     </div>
-    <span class="brand">Hephos AI Solutions</span>
     <span class="tag">Premium AI Chatbot</span>
   </div>
 
@@ -139,7 +147,7 @@
     <section class="hero">
       <div>
         <h1>Hephos AI Assistant</h1>
-        <p>Smart. Fast. Automated. — Emerald × Gold premium interface.</p>
+        <p>Smart. Fast. Automated. — White × Gold background with Emerald chat.</p>
       </div>
       <div>
         <span class="chip">GPT-4o-mini</span>
@@ -154,54 +162,53 @@
       </div>
 
       <div id="msgs" class="msgs">
-        <div class="msg ai">👋 Welcome! I’m the Hephos AI Assistant. How can I help you today?
-          <small>AI • just now</small>
-        </div>
+        <div class="msg ai">👋 Welcome! I’m the Hephos AI Assistant. How can I help you today?</div>
       </div>
 
       <div class="card-foot">
-        <input id="input" placeholder="Type your message and press Enter…" autocomplete="off" />
+        <input id="input" placeholder="Type your message…" autocomplete="off"/>
         <button id="send">Send</button>
       </div>
     </section>
+
     <div class="footnote">© Hephos AI — Crafted with #023020 &amp; #D4AF37</div>
   </main>
 
   <script>
-    const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat'; // promijeni na svoj Render URL
-
+    const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat'; // <-- stavi svoj Render URL
     const msgs = document.getElementById('msgs');
     const inp  = document.getElementById('input');
     const btn  = document.getElementById('send');
+    const logo = document.getElementById('logo');
 
-    function timeNow(){ return new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}); }
-    function escapeHtml(s){ return s.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m])); }
-
+    function escapeHtml(s){return s.replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m]));}
     function addMsg(text, who='ai'){
-      const div = document.createElement('div');
-      div.className = `msg ${who}`;
-      div.innerHTML = `${escapeHtml(text)}<small>${who==='ai'?'AI':'You'} • ${timeNow()}</small>`;
-      msgs.appendChild(div);
-      msgs.scrollTop = msgs.scrollHeight;
-      return div;
+      const div=document.createElement('div'); div.className=`msg ${who}`;
+      div.innerHTML=escapeHtml(text); msgs.appendChild(div); msgs.scrollTop=msgs.scrollHeight; return div;
     }
     function addTyping(){
-      const wrap = document.createElement('div'); wrap.className='typing';
-      wrap.innerHTML='<i></i><i></i><i></i>'; msgs.appendChild(wrap); msgs.scrollTop = msgs.scrollHeight; return wrap;
+      const t=document.createElement('div'); t.className='typing'; t.innerHTML='<i></i><i></i><i></i>';
+      msgs.appendChild(t); msgs.scrollTop=msgs.scrollHeight; return t;
     }
 
     async function sendMessage(){
-      const text = inp.value.trim(); if(!text) return;
-      addMsg(text,'me'); inp.value=''; const typing = addTyping();
+      const text=inp.value.trim(); if(!text) return;
+      addMsg(text,'me'); inp.value='';
+      const typing=addTyping();
+      logo.classList.add('glow'); // logo glow dok AI "tipka"
       try{
-        const r = await fetch(API_URL, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ message: text }) });
-        const data = await r.json(); typing.remove();
-        addMsg(data.response || data.error || 'No response','ai');
-      }catch{ typing.remove(); addMsg('⚠️ Connection error. Please try again.','ai'); }
-      msgs.scrollTop = msgs.scrollHeight;
+        const r=await fetch(API_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({message:text})});
+        const data=await r.json(); typing.remove(); logo.classList.remove('glow');
+        addMsg(data.response||data.error||'No response','ai');
+      }catch(e){
+        typing.remove(); logo.classList.remove('glow');
+        addMsg('⚠️ Connection error. Please try again.','ai');
+      }
+      msgs.scrollTop=msgs.scrollHeight;
     }
-    btn.addEventListener('click', sendMessage);
-    inp.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); sendMessage(); }});
+
+    btn.addEventListener('click',sendMessage);
+    inp.addEventListener('keydown',e=>{ if(e.key==='Enter'){ e.preventDefault(); sendMessage(); }});
   </script>
 </body>
 </html>
