--- a/index.html
+++ b/index.html
@@ -7,134 +7,136 @@
   <link rel="icon" type="image/png" href="logo.png"/>
   <style>
     :root{
-      --emerald:#023020; --emerald-2:#0e2e25; --emerald-3:#10231d;
-      --gold:#D4AF37; --gold-2:#e8c95c; --gold-3:#f6e6a9;
-      --text:#F5F7F6; --muted:#5b5b5b;
-      --stroke:rgba(212,175,55,.28);
+      /* boje */
+      --dark:#121315;             /* vanjska tamno siva */
+      --dark-2:#1a1b1f;
+      --emerald:#023020;          /* zelene poruke */
+      --emerald-2:#024e37;
+      --lgold:#EADFB7;            /* svijetlo zlato */
+      --lgold-2:#D9C68C;          /* sekundarno svijetlo zlato */
+      --text:#F5F7F6;
+      --muted:#b7b7bb;
+      --stroke:rgba(233,220,183,.30);
     }
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
 
-    /* Bijelo-zlatna podloga s animiranim shimmerom */
+    /* VANJSKA POZADINA – tamno siva */
     body{
       font:16px/1.6 Inter,system-ui,"Segoe UI",Roboto,sans-serif;
-      background:
-        radial-gradient(900px 600px at 120% -10%, rgba(212,175,55,.28), transparent 60%),
-        linear-gradient(160deg,#fff 10%,#fdf7e3 55%,#f3d98b 100%);
-      position:relative; color:#222;
-      min-height:100vh; display:flex; flex-direction:column; align-items:center;
-      overflow-x:hidden;
-    }
-    /* zlatni shimmer trak */
-    .shimmer{
-      position:fixed; inset:0; pointer-events:none; z-index:0;
-      background: radial-gradient(1200px 200px at -20% 0%, rgba(246,230,169,.20), transparent 60%) ,
-                  radial-gradient(1000px 180px at 120% 20%, rgba(212,175,55,.18), transparent 65%);
-      animation: sweep 12s linear infinite;
-      mix-blend-mode:soft-light;
-    }
-    @keyframes sweep{
-      0%{transform:translateX(-10%) translateY(0)}
-      50%{transform:translateX(10%) translateY(6%)}
-      100%{transform:translateX(-10%) translateY(0)}
+      background: radial-gradient(900px 600px at -20% -10%, rgba(234,223,183,.08), transparent 60%),
+                  linear-gradient(180deg,var(--dark),var(--dark-2));
+      color:#eaeaea;
+      display:flex; flex-direction:column; align-items:center; min-height:100vh;
     }
 
     /* Header */
     .nav{
-      z-index:10;
-      position:sticky; top:0; width:100%;
+      position:sticky; top:0; width:100%; z-index:10;
       display:flex; align-items:center; justify-content:center; gap:12px;
-      padding:12px 18px; background:rgba(255,255,255,.7); backdrop-filter:blur(10px);
-      border-bottom:1px solid rgba(212,175,55,.25); box-shadow:0 4px 20px rgba(0,0,0,.1);
+      padding:12px 18px;
+      background:rgba(18,19,21,.7); backdrop-filter:blur(10px);
+      border-bottom:1px solid rgba(234,223,183,.20);
+      box-shadow:0 4px 20px rgba(0,0,0,.35);
     }
-    .nav-left{position:absolute; left:20px; display:flex; align-items:center; gap:10px}
-    .logo{height:32px}
-    /* logo glow kad AI tipka */
-    .logo.glow{ filter: drop-shadow(0 0 14px rgba(212,175,55,.75)) brightness(1.1); }
-
-    .brand{font-weight:800; color:#023020; letter-spacing:.4px}
+    .nav-left{position:absolute; left:18px; display:flex; align-items:center; gap:10px}
+    .logo{height:30px}
+    .brand{font-weight:800; color:#fff; letter-spacing:.4px}
     .tag{padding:4px 10px; border-radius:999px; font-size:12px; color:#111;
-      background:linear-gradient(135deg,var(--gold),var(--gold-3));
-      border:1px solid rgba(255,255,255,.2);
-      box-shadow:0 6px 18px rgba(212,175,55,.35);
+      background:linear-gradient(135deg,var(--lgold),#f5edd0);
+      border:1px solid rgba(255,255,255,.15);
+      box-shadow:0 6px 18px rgba(234,223,183,.25);
     }
 
-    .container{z-index:1; max-width:950px; width:100%; margin:28px auto; padding:0 16px; display:flex; flex-direction:column; gap:20px}
+    /* Layout */
+    .container{max-width:950px; width:100%; margin:26px auto; padding:0 16px; display:flex; flex-direction:column; gap:18px}
+
     .hero{
-      padding:20px; border-radius:18px;
-      background:linear-gradient(135deg,#ffffffd0,#fff7e7d0);
-      border:1px solid rgba(212,175,55,.3);
-      box-shadow:0 10px 25px rgba(0,0,0,.12);
-      display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:12px;
+      padding:18px 20px; border-radius:16px;
+      background:linear-gradient(135deg,rgba(255,255,255,.1),rgba(234,223,183,.08));
+      border:1px solid rgba(234,223,183,.2);
+      box-shadow:0 10px 25px rgba(0,0,0,.25);
+      display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:10px;
     }
-    .hero h1{margin:0; font-weight:900; color:#023020}
-    .hero p{margin:4px 0 0; color:#5b5b5b; font-size:14px}
-    .chip{padding:8px 12px; border-radius:999px; font-size:13px; border:1px solid rgba(212,175,55,.35); background:rgba(255,255,255,.55); color:#444; margin-left:8px}
+    .hero h1{margin:0; font-weight:900}
+    .hero p{margin:4px 0 0; color:#c9c9ce; font-size:14px}
+    .chip{padding:8px 12px; border-radius:999px; font-size:13px; border:1px solid rgba(234,223,183,.35); background:rgba(255,255,255,.06); color:#ddd; margin-left:8px}
 
-    /* Chatbox (tamno zeleni) */
+    /* CHATBOX – bijelo-zlatni gradient */
     .card{
       height:72vh; border-radius:22px; overflow:hidden; position:relative;
-      background:linear-gradient(180deg,var(--emerald),var(--emerald-3));
+      background: linear-gradient(180deg,#ffffff 0%, #fff8e7 45%, #f3e7c1 100%);
       border:2px solid var(--stroke);
-      box-shadow:0 30px 70px rgba(0,0,0,.28);
+      box-shadow:0 28px 70px rgba(0,0,0,.35);
       display:flex; flex-direction:column;
+      color:#111;
     }
+    /* watermark u chatu – vrlo suptilan */
     .card::before{
       content:""; position:absolute; inset:0; pointer-events:none;
-      background:url('logo.png') center/260px no-repeat;
-      opacity:.05; filter:grayscale(100%) brightness(400%);
+      background:url('logo.png') center/240px no-repeat;
+      opacity:.05; filter:grayscale(100%) brightness(250%);
     }
+
     .card-head{
-      padding:14px 16px; display:flex; justify-content:space-between; align-items:center;
-      background:rgba(2,48,32,.7); border-bottom:1px solid rgba(255,255,255,.12); backdrop-filter:blur(6px);
+      padding:12px 16px; display:flex; justify-content:space-between; align-items:center;
+      background:linear-gradient(180deg, rgba(255,255,255,.8), rgba(255,255,255,.6));
+      border-bottom:1px solid rgba(0,0,0,.06);
     }
-    .status{display:flex; align-items:center; gap:8px; color:#fff; font-size:13px}
-    .dot{width:8px; height:8px; border-radius:50%; background:#43d38d; box-shadow:0 0 12px #43d38d}
+    .status{display:flex; align-items:center; gap:8px; color:#333; font-size:13px}
+    .dot{width:8px; height:8px; border-radius:50%; background:#43d38d; box-shadow:0 0 10px #43d38d}
 
     .msgs{flex:1; padding:18px; display:flex; flex-direction:column; gap:12px; overflow:auto}
-    .msg{padding:12px 16px; max-width:78%; border-radius:14px; font-size:15px; line-height:1.5; word-wrap:break-word; box-shadow:0 2px 8px rgba(0,0,0,.15); animation:fade .2s ease}
-    .ai{align-self:flex-start; background:#0f1f18; border:1px solid rgba(212,175,55,.25); color:#fff}
-    .me{align-self:flex-end; background:#024e37; border:1px solid rgba(212,175,55,.32); color:#fff}
 
-    .typing{display:flex; gap:6px; align-items:center; padding:8px 12px; background:#0f1f18; border:1px dashed rgba(212,175,55,.35); border-radius:12px}
-    .typing i{width:6px; height:6px; border-radius:50%; background:var(--gold); opacity:.85; animation:bounce 1.2s infinite}
-    .typing i:nth-child(2){animation-delay:.15s} .typing i:nth-child(3){animation-delay:.3s}
+    /* mjehurići poruka (AI tamno-sivi, korisnik zeleni) */
+    .msg{padding:12px 16px; max-width:78%; border-radius:14px; font-size:15px; line-height:1.5; word-wrap:break-word; box-shadow:0 2px 8px rgba(0,0,0,.12); animation:fade .2s ease}
+    .ai{align-self:flex-start; background:#1f1f23; color:#f2f2f2; border:1px solid rgba(234,223,183,.22)}
+    .me{align-self:flex-end; background:var(--emerald-2); color:#fff; border:1px solid rgba(234,223,183,.30)}
 
-    .card-foot{padding:12px; display:flex; gap:10px; background:rgba(2,48,32,.7); border-top:1px solid rgba(255,255,255,.1); backdrop-filter:blur(6px)}
-    input{flex:1; padding:14px; border-radius:12px; border:1px solid rgba(212,175,55,.35); background:rgba(255,255,255,.1); color:#fff; outline:none}
-    input:focus{border-color:var(--gold); box-shadow:0 0 8px rgba(212,175,55,.45)}
+    /* TIPKANJE – rotirajući logo (umjesto “...”) */
+    .typing-logo{
+      align-self:flex-start; padding:6px 10px; border-radius:12px;
+      background:#1f1f23; border:1px dashed rgba(234,223,183,.35);
+      display:flex; align-items:center; gap:10px;
+    }
+    .typing-logo img{height:18px; width:auto; animation:spin 1.2s linear infinite; filter:drop-shadow(0 0 8px rgba(234,223,183,.4))}
+    @keyframes spin{to{transform:rotate(360deg)}}
 
-    /* 3D zlatni gumb + pulsirajući glow */
+    .card-foot{
+      padding:12px; display:flex; gap:10px;
+      background:linear-gradient(0deg, rgba(255,255,255,.8), rgba(255,255,255,.6));
+      border-top:1px solid rgba(0,0,0,.06);
+    }
+    input{
+      flex:1; padding:14px; border-radius:12px; border:1px solid rgba(0,0,0,.12);
+      background:rgba(255,255,255,.8); color:#111; outline:none;
+    }
+    input:focus{border-color:var(--lgold-2); box-shadow:0 0 8px rgba(233,220,183,.6)}
+    /* 3D svijetlo-zlatni gumb */
     button{
       position:relative; padding:14px 20px; border-radius:12px; border:0; cursor:pointer;
       color:#111; font-weight:800; letter-spacing:.2px;
-      background:linear-gradient(135deg,var(--gold),var(--gold-2));
-      box-shadow:
-        inset 0 1px 0 rgba(255,255,255,.55),
-        inset 0 -2px 0 rgba(173,136,20,.6),
-        0 10px 20px rgba(212,175,55,.35);
+      background:linear-gradient(135deg,var(--lgold),var(--lgold-2));
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.65),
+                  inset 0 -2px 0 rgba(160,140,80,.55),
+                  0 10px 22px rgba(233,220,183,.35);
       transition:transform .18s ease, box-shadow .18s ease;
     }
-    button::after{ /* halo glow */
-      content:""; position:absolute; inset:-6px; border-radius:14px; z-index:-1;
-      background:radial-gradient(240px 40px at 50% 100%, rgba(212,175,55,.45), transparent 70%);
-      opacity:.0; transition:opacity .18s ease;
-    }
-    button:hover{ transform:translateY(-1px); box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 -2px 0 rgba(173,136,20,.7), 0 14px 28px rgba(212,175,55,.45) }
-    button:hover::after{ opacity:.6 }
+    button:hover{ transform:translateY(-1px); box-shadow: inset 0 1px 0 rgba(255,255,255,.7), inset 0 -2px 0 rgba(160,140,80,.65), 0 14px 28px rgba(233,220,183,.45) }
     button:active{ transform:translateY(0) }
 
-    .footnote{margin:14px auto 28px; text-align:center; color:var(--muted); font-size:12px}
+    .footnote{margin:14px auto 28px; text-align:center; color:#bdbdc2; font-size:12px}
 
     @keyframes fade{from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:none}}
-    @keyframes bounce{0%,60%,100%{transform:translateY(0); opacity:.7} 30%{transform:translateY(-4px); opacity:1}}
 
-    @media(max-width:720px){ .container{margin:18px auto} .card{height:70vh; min-height:500px} .msg{max-width:88%} .nav-left{left:12px} }
+    @media(max-width:720px){
+      .container{margin:18px auto}
+      .card{height:70vh; min-height:500px}
+      .msg{max-width:88%}
+    }
   </style>
 </head>
 <body>
-  <div class="shimmer" aria-hidden="true"></div>
-
   <div class="nav">
     <div class="nav-left">
       <img src="logo.png" alt="Hephos AI logo" class="logo" id="logo"/>
@@ -147,7 +149,7 @@
     <section class="hero">
       <div>
         <h1>Hephos AI Assistant</h1>
-        <p>Smart. Fast. Automated. — White × Gold background with Emerald chat.</p>
+        <p>White & Light-Gold interface outside • Emerald chat bubbles inside.</p>
       </div>
       <div>
         <span class="chip">GPT-4o-mini</span>
@@ -171,11 +173,12 @@
       </div>
     </section>
 
-    <div class="footnote">© Hephos AI — Crafted with #023020 &amp; #D4AF37</div>
+    <div class="footnote">© Hephos AI — Light-Gold accents #EADFB7 / #D9C68C</div>
   </main>
 
   <script>
     const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat'; // <-- stavi svoj Render URL
+
     const msgs = document.getElementById('msgs');
     const inp  = document.getElementById('input');
     const btn  = document.getElementById('send');
@@ -186,19 +189,23 @@
       const div=document.createElement('div'); div.className=`msg ${who}`;
       div.innerHTML=escapeHtml(text); msgs.appendChild(div); msgs.scrollTop=msgs.scrollHeight; return div;
     }
-    function addTyping(){
-      const t=document.createElement('div'); t.className='typing'; t.innerHTML='<i></i><i></i><i></i>';
-      msgs.appendChild(t); msgs.scrollTop=msgs.scrollHeight; return t;
+    /* novi indikator tipkanja – rotirajući logo */
+    function addTypingLogo(){
+      const wrap=document.createElement('div'); wrap.className='typing-logo';
+      wrap.innerHTML='<img src="logo.png" alt="typing"/><span style="color:#ddd">Assistant is thinking…</span>';
+      msgs.appendChild(wrap); msgs.scrollTop=msgs.scrollHeight; return wrap;
     }
 
     async function sendMessage(){
       const text=inp.value.trim(); if(!text) return;
       addMsg(text,'me'); inp.value='';
-      const typing=addTyping();
-      logo.classList.add('glow'); // logo glow dok AI "tipka"
+      const typing=addTypingLogo();  // rotirajući logo umjesto “...”
+      logo.classList.add('glow');
+
       try{
         const r=await fetch(API_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({message:text})});
-        const data=await r.json(); typing.remove(); logo.classList.remove('glow');
+        const data=await r.json();
+        typing.remove(); logo.classList.remove('glow');
         addMsg(data.response||data.error||'No response','ai');
       }catch(e){
         typing.remove(); logo.classList.remove('glow');
